Começando a criar o portfólio

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>HTML</title>
-    </head>
-    <body>
-        <h1>Exercicios</h1>
+<head>
+    <meta charset="UTF-8">
+    <title>Portfólio Web</title>
+</head>
+<body>
+    <a href="#sobre-mim">Sobre mim</a>
+    <a href="#pagina">Página que eu gosto</a>
+    <h1 class="#MeuNome">Bruno Rodrigo Souza Lopes</h1>
+    <img src="EU.png" alt=""Uma foto da minha cara" id=""foto">
+    <p class="descricao">Colocar descrição</p>
+    <p class="resido"><strong>Belo Horizonte - Minas Gerais</strong></p>
+        <h2>Lista de habilidades</h2>
         <ul>
-            <li><a href="#Pessoa 1">Adilson</a></li>
-            <li><a href="#Pessoa 2">Alessandro</a></li>
-            <li><a href="#Pessoa 3">Erickson</a></li>
+            <li class="jovascript">Javascript</li>
         </ul>
-        <img src="https://img.freepik.com/fotos-gratis/desenho-de-colagem-de-pessoas_23-2148888277.jpg?w=826&t=st=1679503093~exp=1679503693~hmac=8379d7b0e18a21d3bfa8fd409485fc897efd3a17c6b8efed20e414e6ad5e92f1" alt="imagem aleatoria"> <br>
-        <img src="2dcd8e6e4be2145fb96459c8e788a9e2.jpg" alt="imagem local"> 
-        <p id="Pessoa 1">Lorem ipsum</p>
-        <p id="Pessoa 2">Eum quas</p>
-        <p id="Pessoa 3">Commodi, doloribus</p>
-
-        <a href="https://www.google.com.br/" target+"_blank">Google</a>
-    </body>
+        <a href="#minha-foto">Minha foto</a>
+        <href="https://blog.betrybe.com/carreira/frontend/" target="_balnk">Artigo legal</href>
+</body>
 </html>
