--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
 </head>
 <body>
     <a href="#sobre-mim">Sobre mim</a>
-    <a href="#pagina">Página que eu gosto</a>
+    <a href="https://adrenaline.com.br/">Página legal</a>
     <h1 class="#MeuNome">Bruno Rodrigo Souza Lopes</h1>
-    <img src="EU.png" alt=""Uma foto da minha cara" id=""foto">
-    <p class="descricao">Colocar descrição</p>
-    <p class="resido"><strong>Belo Horizonte - Minas Gerais</strong></p>
+    <img src="eu.jpeg" alt=""Uma foto da minha cara" id=""foto" width="300x">
+    <p class="descricao">Foto do meu instagram</p>
+    <p class="resido">Tenho 18 anos e atualmente moro em <strong>Belo Horizonte - Minas Gerais</strong> e estou cursando a trybe</p>
         <h2>Lista de habilidades</h2>
         <ul>
             <li class="jovascript">Javascript</li>
         </ul>
-        <a href="#minha-foto">Minha foto</a>
-        <href="https://blog.betrybe.com/carreira/frontend/" target="_balnk">Artigo legal</href>
+        <a href="eu.jpeg">Minha foto</a>
 </body>
 </html>
