--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>PortfÃģlio Web</title>
+    <title>Portifólio Web</title>
 </head>
 <body>
     <a href="#sobre-mim">Sobre mim</a>
-    <a href="https://adrenaline.com.br/">PÃĄgina legal</a>
+    <a href="https://adrenaline.com.br/">Página legal</a>
     <h1 class="#MeuNome">Bruno Rodrigo Souza Lopes</h1>
     <img src="eu.jpeg" alt=""Uma foto da minha cara" id=""foto" width="300x">
     <p class="descricao">Foto do meu instagram</p>
