--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <a href="#sobre-mim">Sobre mim</a>
     <a href="https://adrenaline.com.br/">Página legal</a>
     <h1 class="#MeuNome">Bruno Rodrigo Souza Lopes</h1>
     <img src="eu.jpeg" alt=""Uma foto da minha cara" id=""foto" width="300x">
     <p class="descricao">Foto do meu instagram</p>
-    <p class="resido">Tenho 18 anos e atualmente moro em <strong>Belo Horizonte - Minas Gerais</strong> e estou cursando a trybe</p>
+    <p class="sobre-mim">Tenho 18 anos e atualmente moro em <strong>Belo Horizonte - Minas Gerais</strong> e estou cursando a trybe</p>
         <h2>Lista de habilidades</h2>
         <ul>
-            <li class="jovascript">Javascript</li>
+            <li class="javascript">Javascript</li>
         </ul>
         <a href="eu.jpeg">Minha foto</a>
 </body>
