tentando arrumar site

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfólio Web</title>
-    <link rel="stylesheet" href="./style.css">
+    <style>
+        h1{
+    
+    font-family:Arial;
+}
+body{
+    background-color: rgb(130, 130, 255);
+}
+.javascript {
+    font-size: 20px;
+}
+    </style>
 </head>
 <body>
     <a href="https://adrenaline.com.br/">Página legal</a>
-    <h1 class="#MeuNome">Bruno Rodrigo Souza Lopes</h1>
+    <h1 class="MeuNome">Bruno Rodrigo Souza Lopes</h1>
     <img src="eu.jpeg" alt=""Uma foto da minha cara" id=""foto" width="300x">
     <p class="descricao">Foto do meu instagram</p>
     <p class="sobre-mim">Tenho 18 anos e atualmente moro em <strong>Belo Horizonte - Minas Gerais</strong> e estou cursando a trybe</p>
