Tentando adicionar css como arquivo externo

--- a/index.html
+++ b/index.html
@@ -3,18 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfólio Web</title>
-    <style>
-        h1{
-    
-    font-family:Arial;
-}
-body{
-    background-color: rgb(130, 130, 255);
-}
-.javascript {
-    font-size: 20px;
-}
-    </style>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <a href="https://adrenaline.com.br/">Página legal</a>
