Deixando as coisas mais bonitinhas

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 </head>
 <body>
     <a href="https://adrenaline.com.br/">Página legal</a>
-    <h1 class="MeuNome">Bruno Rodrigo Souza Lopes</h1>
-    <img src="eu.jpeg" alt=""Uma foto da minha cara" id=""foto" width="300x">
-    <p class="descricao">Foto do meu instagram</p>
-    <p class="sobre-mim">Tenho 18 anos e atualmente moro em <strong>Belo Horizonte - Minas Gerais</strong> e estou cursando a trybe</p>
+    <div><h1 class="MeuNome">Bruno Rodrigo Souza Lopes</h1>
+        <div class="BlocoDaFoto"><img src="eu.jpeg" alt=""Uma foto da minha cara" id="foto" width="300x">
+        <p class="descricao">Tenho 18 anos e atualmente moro em <strong>Belo Horizonte - Minas Gerais</strong> e estou cursando a trybe</p>
+        </div>
+    </div>
+    <p class="sobre-mim"></p>
         <h2>Lista de habilidades</h2>
         <ul>
-            <li class="javascript">Javascript</li>
+            <li class="javascript">Iniciante em Javascript</li>
+            <li>Ainda estou aprendendo mais coisas</li>
         </ul>
         <a href="eu.jpeg">Minha foto</a>
 </body>
